--- a/styles/style.css
+++ b/styles/style.css
@@ -157,3 +157,30 @@ body {
     padding: 10px;
     border-radius: 10px;
 }
+
+.fecha {
+    font-size: 12px;
+    color: gray;
+    margin-left: 10px;
+}
+
+.contenedor-boton-eliminar {
+    display: flex;
+    justify-content: center; /* Centra horizontalmente */
+    margin-top: 20px; /* Espacio superior */
+}
+
+#eliminar_todas {
+    border-radius: 20px; /* Bordes redondeados */
+    background-color: #ff4d4d; /* Color de fondo rojo */
+    color: white; /* Color del texto */
+    border: none; /* Sin borde */
+    padding: 10px 20px; /* Espaciado interno */
+    font-size: 16px; /* Tamaño de fuente */
+    cursor: pointer; /* Cambia el cursor al pasar el mouse */
+    transition: background-color 0.3s; /* Transición suave para el color de fondo */
+}
+
+#eliminar_todas:hover {
+    background-color: #ff1a1a; /* Color de fondo al pasar el mouse */
+}
